# my_sample

./: README.md
GIMP/: exec.bat  my_sample1.py  プラグイン置き場所.txt
Jupyter/: Story.ipynb  SympyTest.ipynb  kalmanfiter-Example.ipynb  kalmanfiter.ipynb  matplotSample.ipynb  回転-座標系変換-2次元.ipynb
bat/: main.bat
boost.numpy/: CMakeLists.txt  sample.cpp  test.py
c/: Makefile  main.c
clib/: CMakeLists.txt  build.bat  configure.sh
clib/aLib/: CMakeLists.txt  aLib.c  aLib.h
clib/bLib/: CMakeLists.txt  bLib.c
clib/cLib/: CMakeLists.txt  build.bat  cLib.c
clib/dLib/: CMakeLists.txt  build.bat  dLib.c
clib/include/: aLib_ext.h  clibs.h
clib/src/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt  build.bat  configure.sh  main.cpp
ctags/: gen_ctags.sh
eigen/: CMakeLists.txt  main.cpp
gcov/: CMakeLists.txt  configure.sh  exec.sh  main.cpp
gtest/: build.bat  install.sh
gtest/gtest_sample/: CMakeLists.txt  configure.sh  gtest_sample.cpp
media_ctrl/DirectX/: DirectX.sln
media_ctrl/DirectX/device_enum/: device_enum.cpp  device_enum.h  device_enum.vcxproj  device_enum.vcxproj.filters  exec.bat  main.cpp
media_ctrl/DirectX/usb_cam/: exec.bat  usb_cam.cpp  usb_cam.vcxproj  usb_cam.vcxproj.filters
memo/: git.txt
multivate_analysis/: configure.sh
multivate_analysis/cpp/: CMakeLists.txt  main.cpp
multivate_analysis/cpp/multivate/: CMakeLists.txt  multivate.cpp  multivate.hpp
multivate_analysis/python/: main.py
my_statics/: CMakeLists.txt  main.cpp
my_statics/my_statics/: CMakeLists.txt  my_statics.cpp  my_statics.hpp
my_statics/plot/: plot.py  sample.xls
numbers/: ReadMe.txt  go.bat  num_box.py  num_box_test.py  num_group.py  num_group_test.py  num_overlap.py  num_overlap_test.py  num_read_q.py  num_solver.py  num_special.py  num_special_test.py  num_template.py  numbers_solver.py  numbers_solver_test.py  sample.xlsx  template.xlsx
opencv/c/: CMakeLists.txt  configure.sh  main.c
opencv/cpp/: CMakeLists.txt  build.bat  main.cpp  solverサンプルデータ.csv  solverサンプルデータ.xlsx
powershell/: pshell.ps1
python/: android_acc.py  main.py  my_docx.py  powerpoint.py  thread_test.py  xlsx.py
python/fe/: fe_00.py  fe_01.py  fe_02.py  fe_03.py  fe_04.py  fe_05.py  fe_06.py  fe_07.py  fe_08.py  fe_09.py  fe_battle.py  fe_compose.py  fe_field.py  fe_gif.py  fe_ivent.py  fe_pil.py  fe_pptx.py  fe_pptx_bak.py  fe_profile.py  fe_prologue.py  fe_prologue_scene.py  fe_talk.py  field00.py  my_pil.py  pptx01.py  profile00_1.py  prologue00.py  talk00_1.py
python/fe/fe_param_00/: battle02.py  battle03.py  field00.py  field01.py  field02.py  field03.py  ivent01.py  ivent02.py  ivent03.py  ivent04.py  ivent05.py  ivent06.py  ivent07.py  ivent08.py  ivent09.py  ivent10.py  ivent11.py  params.py  pptx.py  profile01.py  profile02.py  (+4 more)
python/img/: ss_crop.py  ss_doc.py  ss_eve.bat  ss_eve.py  ss_eve_b.bat  ss_eve_k.bat  ss_eve_m.bat
python/lifegame/: glider_gun.csv  lifegame.py
python/networkx/: sorcery_graph.py  sorcery_make.py  sorcery_read.py  sorcery_save.py
python/socket/: client_test.py  server_test.py
python/url/: myurl.py
sh/: main.sh
utest/: CMakeLists.txt  configure.sh  install_CppUTest.sh  useCppUTestTemplate.sh
utest/cls/: CMakeLists.txt  Cls.cpp  Cls.h  ClsTest.cpp
utest/fnc/: CMakeLists.txt  Fnc.cpp  Fnc.h  FncTest.cpp  utest.cpp
utest/main/: CMakeLists.txt  main.cpp
(+345 files in other folders)
