CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})

ADD_LIBRARY(mymodule SHARED sample.cpp)
TARGET_LINK_LIBRARIES(mymodule ${Boost_LIBRARIES} ${PYTHON_LIBRARY} boost_numpy)
SET_TARGET_PROPERTIES(mymodule PROPERTIES PREFIX "")

ADD_DEFINITIONS("-std=c++11")
