CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ProjectMain)

SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_C_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")

INCLUDE_DIRECTORIES(include)

ADD_SUBDIRECTORY(aLib)
ADD_SUBDIRECTORY(bLib)
ADD_SUBDIRECTORY(src)
