CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ProjectMain)
ADD_EXECUTABLE(main main.cpp)

#SET(CMAKE_BUILD_TYPE Release)
#SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_C_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(CMAKE_C_FLAGS_DEBUG "--coverage")
SET(CMAKE_CXX_FLAGS_DEBUG "--coverage")
