CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#SET(CMAKE_BUILD_TYPE Release)
#SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS_DEBUG "-coverage")
SET(CMAKE_CXX_FLAGS_DEBUG "-coverage")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")



# find CppUTest
FIND_PACKAGE(CppUTest)
INCLUDE_DIRECTORIES(${CppUTest_INCLUDE_DIRS})

# librareis
#ADD_SUBDIRECTORY(cls)
ADD_SUBDIRECTORY(fnc)

# main
INCLUDE_DIRECTORIES(fnc)
ADD_SUBDIRECTORY(main)

