CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CLIB_DIR ${PROJECT_SOURCE_DIR}/cLib/build/)
SET(DLIB_DIR ${PROJECT_SOURCE_DIR}/dLib/build/)

LINK_DIRECTORIES(${CLIB_DIR})
LINK_DIRECTORIES(${DLIB_DIR})

ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main aLib bLib cLib dLib)

set(CMAKE_BUILD_TYPE Release)
