CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CLIB_DIR ${PROJECT_SOURCE_DIR}/cLib/build/)
SET(DLIB_DIR ${PROJECT_SOURCE_DIR}/dLib/build/)

LINK_DIRECTORIES(${CLIB_DIR})
LINK_DIRECTORIES(${DLIB_DIR})

SET(MAINLIBS ${MAINLIBS} aLib)
SET(MAINLIBS ${MAINLIBS} bLib)
SET(MAINLIBS ${MAINLIBS} cLib)
SET(MAINLIBS ${MAINLIBS} dLib)

ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main ${MAINLIBS})

set(CMAKE_BUILD_TYPE Release)
